syntax = "proto3";
package SpaceX.API.Device;

enum BootReason {
   BOOT_REASON_UNKNOWN = 0;
   FORGOTTEN = 1;
   POWER_CYCLE = 2;
   COMMAND = 3;
   SOFTWARE_UPDATE = 4;
   CONFIG_UPDATE = 5;
   UPTIME_FDIR = 6;
   REPEATER_FDIR = 7;
   AVIATION_ETH_WAN_FDIR = 8;
}

message DeviceInfo {
  string id = 1;
  string hardware_version = 2;
  string software_version = 3;
  string manufactured_version = 11;
  int64 generation_number = 12;
  string country_code = 4;
  int32 utc_offset_s = 5;
  bool software_partitions_equal = 6;
  bool is_dev = 7;
  int32 bootcount = 8;
  int32 anti_rollback_version = 9;
  bool is_hitl = 10;
  SpaceX.API.Device.BootInfo boot = 1001;
}

message DeviceState {
  uint64 uptime_s = 1;
}

message SignedData {
  bytes data = 1;
  bytes signature = 2;
}

message GetNextIdRequest {
}

message GetNextIdResponse {
  uint64 id = 1;
  uint64 epoch_id = 2;
}

message BootInfo {
  message CountByReasonEntry {
    int32 key = 1;
    int32 value = 2;
  }
  message CountByReasonDeltaEntry {
    int32 key = 1;
    int32 value = 2;
  }
  repeated SpaceX.API.Device.BootInfo.CountByReasonEntry count_by_reason = 1;
  repeated SpaceX.API.Device.BootInfo.CountByReasonDeltaEntry count_by_reason_delta = 4;
  SpaceX.API.Device.BootReason last_reason = 2;
  int32 last_count = 3;
}

message PingTarget {
  string service = 1;
  string location = 2;
  string address = 3;
}

message PingResult {
  SpaceX.API.Device.PingTarget target = 3;
  float dropRate = 1;
  float latencyMs = 2;
}

message BondingChallenge {
  string dish_id = 1;
  string wifi_id = 2;
  bytes nonce = 3;
}

message AuthenticateRequest {
  SpaceX.API.Device.SignedData challenge = 1;
}

message ChallengeResponse {
  bytes signature = 1;
  bytes certificate_chain = 2;
}

message NetworkInterface {
  message RxStats {
    uint64 bytes = 1;
    uint64 packets = 2;
    uint64 frame_errors = 3;
  }
  message TxStats {
    uint64 bytes = 1;
    uint64 packets = 2;
  }
  string name = 1;
  bool up = 4;
  SpaceX.API.Device.NetworkInterface.RxStats rx_stats = 2;
  SpaceX.API.Device.NetworkInterface.TxStats tx_stats = 3;
  oneof interface {
    SpaceX.API.Device.EthernetNetworkInterface ethernet = 1000;
    SpaceX.API.Device.WifiNetworkInterface wifi = 1001;
  }
}

message EthernetNetworkInterface {
  enum Duplex {
     UNKNOWN = 0;
     HALF = 1;
     FULL = 2;
  }
  bool link_detected = 1;
  uint32 speed_mbps = 2;
  bool autonegotiation_on = 3;
  SpaceX.API.Device.EthernetNetworkInterface.Duplex duplex = 4;
}

message WifiNetworkInterface {
  message ThermalStatus {
    uint32 level = 1;
    uint32 temp = 2;
    double temp2 = 3;
    uint32 power_reduction = 4;
    uint32 duty_cycle = 5;
  }
  message InvalidPacketCounts {
    uint32 rx_invalid_nwid = 1;
    uint32 rx_invalid_crypt = 2;
    uint32 rx_invalid_frag = 3;
    uint32 tx_excessive_retries = 4;
    uint32 invalid_misc = 5;
  }
  message AntennaeStatus {
    float rssi1 = 1;
    float rssi2 = 2;
    float rssi3 = 3;
    float rssi4 = 4;
  }
  SpaceX.API.Device.WifiNetworkInterface.ThermalStatus thermal_status = 1;
  SpaceX.API.Device.WifiNetworkInterface.InvalidPacketCounts invalid_packet_counts = 2;
  uint32 channel = 3;
  uint32 missed_beacons = 8;
  double link_quality = 4;
  double signal_level = 5;
  double noise_level = 6;
  SpaceX.API.Device.WifiNetworkInterface.AntennaeStatus antennae_status = 9;
}

message LLAPosition {
  double lat = 1;
  double lon = 2;
  double alt = 3;
}

message ECEFPosition {
  double x = 1;
  double y = 2;
  double z = 3;
}

message InitiateRemoteSshRequest {
}

message InitiateRemoteSshResponse {
  uint32 port = 1;
  string address = 2;
  bytes stsafe = 3;
}

message SoftwareUpdateRequest {
  uint64 stream_id = 1;
  bytes data = 2;
  bool open = 3;
  bool close = 4;
}

message SoftwareUpdateResponse {
}

